Fix flex alignment of content
Remove 'align-items: center' from body, and place 'align-self: center'
onto main content container, since it is the only element that should be
center-aligned.

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,6 @@ body {
     height: 100vh;
     margin: 0;
     display: flex;
-    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
     background: var(--main-bg);
 }
@@ -113,6 +112,7 @@ body {
 }
 
 .content-container {
+    align-self: center;
     flex: 1;
 }
 
